--- a/.github/workflows/updatefile.yml
+++ b/.github/workflows/updatefile.yml
@@ -13,6 +13,8 @@ jobs:
         run: |
           ls -lrt
           pwd
+          cd /home/runner/work/testrepo1/testrepo1
+          ls -lrt
           
         
     
