--- a/.github/workflows/updatefile.yml
+++ b/.github/workflows/updatefile.yml
@@ -13,7 +13,7 @@ jobs:
         run: |
           ls -lrt
           pwd
-          cd /home/runner/work/testrepo1/
+          cd /home/runner/work/testrepo1/testrepo1/.github/
           ls -lrt
           
         
