--- a/.github/workflows/updatefile.yml
+++ b/.github/workflows/updatefile.yml
@@ -14,6 +14,7 @@ jobs:
           ls -lrt
           pwd
           cd /home/runner/work/testrepo1/testrepo1
+          cd /usr/bin/bash
           ls -lrt
           
         
